[feat] Creates the module molgenis-api-ejprd

--- a/pom.xml
+++ b/pom.xml
@@ -1015,6 +1015,7 @@
     <module>molgenis-amazon-bucket</module>
     <module>molgenis-api</module>
     <module>molgenis-api-permissions</module>
+    <module>molgenis-api-ejprd</module>
     <module>molgenis-api-data</module>
     <module>molgenis-api-fair</module>
     <module>molgenis-api-files</module>
