--- a/molgenis-app/pom.xml
+++ b/molgenis-app/pom.xml
@@ -111,6 +111,11 @@
     </dependency>
     <dependency>
       <groupId>org.molgenis</groupId>
+      <artifactId>molgenis-api-ejprd</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.molgenis</groupId>
       <artifactId>molgenis-api-fair</artifactId>
       <version>${project.version}</version>
     </dependency>
