--- a/molgenis-api-ejprd/pom.xml
+++ b/molgenis-api-ejprd/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>molgenis</artifactId>
     <groupId>org.molgenis</groupId>
-    <version>8.5.0-SNAPSHOT</version>
+    <version>8.6.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <name>api-ejprd</name>
@@ -19,13 +19,13 @@
     <dependency>
       <groupId>org.molgenis</groupId>
       <artifactId>molgenis-data</artifactId>
-      <version>8.5.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.molgenis</groupId>
       <artifactId>molgenis-api</artifactId>
-      <version>8.5.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <!-- test dependencies -->
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>org.molgenis</groupId>
       <artifactId>molgenis-web</artifactId>
-      <version>8.5.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
