Updates pom.xml for ejprd module

--- a/molgenis-api-ejprd/pom.xml
+++ b/molgenis-api-ejprd/pom.xml
@@ -1,76 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>molgenis-api-ejprd</artifactId>
+  <dependencies>
+    <dependency>
+      <artifactId>spring-webmvc</artifactId>
+      <groupId>org.springframework</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>molgenis-data</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>compile</scope>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>molgenis-api</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>compile</scope>
+      <version>${project.version}</version>
+    </dependency>
+    <!-- test dependencies -->
+    <dependency>
+      <artifactId>molgenis-data</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>test</scope>
+      <type>test-jar</type>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>molgenis-web</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>test</scope>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>molgenis-util</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>test</scope>
+      <type>test-jar</type>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>molgenis-test</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>test</scope>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>jsonassert</artifactId>
+      <groupId>org.skyscreamer</groupId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <artifactId>json-path</artifactId>
+      <groupId>com.jayway.jsonpath</groupId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <artifactId>spring-security-test</artifactId>
+      <groupId>org.springframework.security</groupId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <artifactId>junit</artifactId>
+      <groupId>junit</groupId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  <modelVersion>4.0.0</modelVersion>
+
+  <name>api-ejprd</name>
   <parent>
     <artifactId>molgenis</artifactId>
     <groupId>org.molgenis</groupId>
     <version>8.6.0-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <name>api-ejprd</name>
-
-  <artifactId>molgenis-api-ejprd</artifactId>
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-data</artifactId>
-      <version>${project.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-api</artifactId>
-      <version>${project.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <!-- test dependencies -->
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-data</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-web</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-util</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.molgenis</groupId>
-      <artifactId>molgenis-test</artifactId>
-      <version>${project.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.skyscreamer</groupId>
-      <artifactId>jsonassert</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.jayway.jsonpath</groupId>
-      <artifactId>json-path</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <!--build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.molgenis.api.ejprd.EJPRDController</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build-->
 
 
 </project>
