refactor(api-ejprd): move the EntityType parameter from PackageMappingService to QueryBuilder

--- a/molgenis-api-ejprd/pom.xml
+++ b/molgenis-api-ejprd/pom.xml
@@ -20,6 +20,12 @@
       <scope>compile</scope>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <artifactId>molgenis-api-data</artifactId>
+      <groupId>org.molgenis</groupId>
+      <scope>compile</scope>
+      <version>${project.version}</version>
+    </dependency>
     <!-- test dependencies -->
     <dependency>
       <artifactId>molgenis-data</artifactId>
