--- a/molgenis-api-ejprd/pom.xml
+++ b/molgenis-api-ejprd/pom.xml
@@ -2,11 +2,21 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>molgenis</artifactId>
+    <groupId>org.molgenis</groupId>
+    <version>8.7.0-SNAPSHOT</version>
+  </parent>
+  <name>api-ejprd</name>
   <artifactId>molgenis-api-ejprd</artifactId>
   <dependencies>
     <dependency>
       <artifactId>spring-webmvc</artifactId>
       <groupId>org.springframework</groupId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
       <artifactId>molgenis-data</artifactId>
@@ -76,12 +86,6 @@
   </dependencies>
   <modelVersion>4.0.0</modelVersion>
 
-  <name>api-ejprd</name>
-  <parent>
-    <artifactId>molgenis</artifactId>
-    <groupId>org.molgenis</groupId>
-    <version>8.7.0-SNAPSHOT</version>
-  </parent>
   <!--build>
     <plugins>
       <plugin>
